--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -5,6 +5,11 @@
         <title>Rock Paper Scissors</title>
     </head>
     <body>
+        <ul>
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </ul>
     </body>
 
     <script src="scripts.js" type="text/javascript"></script>
